# rustkernel

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  build_and_test.sh  clippy.toml  rustfmt.toml  test.sh
.cargo/: config.toml
drivers/: Cargo.toml
drivers/src/: dummy.rs  keyboard.rs  lib.rs  mem.rs  platform_example.rs  ramdisk.rs  rtl8139.rs  serial.rs
iso/boot/: rust-kernel
iso/boot/grub/: grub.cfg
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: advanced_perf.rs  arp.rs  benchmark.rs  boot.rs  boot.s  boot_clean.rs  console.rs  cpu.rs  device.rs  device_advanced.rs  diagnostics.rs  driver.rs  drivers_init.rs  enhanced_scheduler.rs  error.rs  hardware.rs  icmp.rs  init.rs  interrupt.rs  ipc.rs  kthread.rs  lib.rs  logging.rs  main.rs  memfs.rs  module.rs  module_loader.rs  multiboot.s  net_basic.rs  network.rs  network_advanced.rs  network_stub.rs  panic.rs  perf.rs  prelude.rs  process.rs  scheduler.rs  shell.rs  simple_boot.s  stress_test.rs  (+13 more)
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: boot.S  boot.s  boot_entry.s  context.rs  exceptions.s  gdt.rs  idt.rs  mod.rs  paging.rs  pic.rs  port.rs
kernel/src/fs/: advanced.rs  dentry.rs  devfs.rs  file.rs  inode.rs  mod.rs  mode.rs  mount.rs  operations.rs  path.rs  procfs.rs  ramfs.rs  super_block.rs
kernel/src/memory/: advanced_allocator.rs  allocator.rs  kmalloc.rs  mod.rs  page.rs  page_table.rs  vmalloc.rs
modules/: Cargo.toml
modules/src/: hello.rs  lib.rs  test.rs
src/: lib.rs  main.rs
