[workspace]
resolver = "2"
members = [
    "kernel",
    "drivers", 
]

[workspace.dependencies]
kernel = { path = "kernel" }

# Workspace-level profile configuration
[profile.dev]
panic = "abort"
opt-level = 0
debug = true
lto = false

[profile.release]
panic = "abort"
opt-level = "s"
debug = false
lto = true
codegen-units = 1
