[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
authors = ["Rust Kernel Contributors"]
description = "Core kernel APIs and functionality"
license = "GPL-2.0"

[lib]
name = "kernel"
crate-type = ["rlib"]

[dependencies]
spin = "0.9"
bitflags = "2.4"
linked_list_allocator = "0.10"
once_cell = { version = "1.19", default-features = false, features = ["critical-section"] }

[features]
default = []
alloc = []
smp = []  # Symmetric Multi-Processing
debug = []

[build-dependencies]
cc = "1.0"

# Profile configuration moved to workspace root
